# sidekick

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  FEATURES.md  README.md  auth.py  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  security.yml
docs/: plan-recipe-extraction.md  secrets-azure-keyvault.md  security.md
examples/01-local-ollama-docker/: .env.example  README.md
scripts/: capture_screenshots.py  run-with-kv.ps1  run-with-kv.sh  secrets-push.ps1  sidekick_secrets.py  smoke_test_web_only.py
src/sidekick/: __init__.py  agent.py  allowlist.py  bot.py  init_cli.py  logging_setup.py  mcp_server.py  ratelimit.py  reminders.py  telegram_format.py
src/sidekick/calendar/: __init__.py  base.py  chronary.py  google.py
src/sidekick/llm/: __init__.py  anthropic.py  base.py  ollama.py
src/sidekick/storage/: __init__.py  base.py  google_tasks.py  sqlite_tasks.py
src/sidekick/web/: __init__.py  app.py  auth.py  csrf.py  helpers.py  middleware.py
src/sidekick/web/handlers/: calendar_routes.py  chat.py  dashboard.py  health.py  login.py  reminders.py  settings.py  tasks.py
src/sidekick/web/static/: style.css
src/sidekick/web/templates/: base.html  chat.html  dashboard.html  login.html  settings.html
src/sidekick/web/templates/calendar/: list.html
src/sidekick/web/templates/partials/: chat_message.html
src/sidekick/web/templates/reminders/: list.html
src/sidekick/web/templates/tasks/: detail.html  list.html
tests/: conftest.py  test_agent.py  test_agent_destructive_set.py  test_agent_tool_loop.py  test_allowlist.py  test_bot.py  test_bot_allowlist.py  test_calendar_chronary.py  test_file_permissions.py  test_init_cli.py  test_llm_anthropic.py  test_llm_ollama.py  test_logging_redaction.py  test_mcp_dispatch.py  test_mcp_env_scoping.py  test_mcp_server.py  test_platforms_slack.py  test_ratelimit.py  test_reminder_sentinel.py  test_reminders.py  test_reminders_builtins.py  test_reminders_schema.py  test_security_docs.py  test_sidekick_secrets.py  test_slack_allowlist.py  test_storage_tasks.py  test_telegram_format.py
tests/web/: conftest.py  test_app_factory.py  test_auth.py  test_calendar_routes.py  test_chat.py  test_csrf.py  test_dashboard.py  test_health.py  test_login.py  test_non_loopback_refused.py  test_reminders_routes.py  test_security_headers.py  test_settings_denylist.py  test_settings_routes.py  test_task_url_encoding.py  test_tasks_routes.py  test_web_chat_ratelimit.py  test_xss.py
