[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidekick"
version = "0.1.0"
description = "A personal Telegram assistant powered by Claude AI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==21.6",
    "anthropic>=0.40.0",
    "mcp==1.23.0",
    "chronary>=0.1.3",
    "slack-bolt>=1.20",
    "aiohttp>=3.10",
    "ollama>=0.4",
    "APScheduler==3.10.4",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
sidekick = "sidekick.bot:main"
sidekick-init = "sidekick.init_cli:main"
