[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidekick"
version = "0.1.0"
description = "A personal Telegram assistant powered by Claude AI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==21.6",
    "anthropic>=0.40.0",
    "mcp==1.23.0",
    "chronary>=0.1.3",
    "slack-bolt>=1.20",
    "aiohttp>=3.10",
    "aiohttp-jinja2>=1.6",
    "jinja2>=3.1",
    "ollama>=0.4",
    "APScheduler==3.10.4",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[project.scripts]
sidekick = "sidekick.bot:main"
sidekick-init = "sidekick.init_cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/sidekick"]

[[tool.mypy.overrides]]
module = ["chronary.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-v --cov=src/sidekick --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
source = ["src/sidekick"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
