[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sidekick"
version = "0.1.0"
description = "A personal Telegram assistant powered by Claude AI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot==22.8",
    "anthropic>=0.109.1",
    "mcp==1.27.2",
    "chronary>=0.4.1",
    "slack-bolt>=1.28.0",
    "aiohttp>=3.14.1",
    "aiohttp-jinja2>=1.6",
    "aiohttp-session>=2.12.1",
    "jinja2>=3.1.6",
    "ollama>=0.6.2",
    "APScheduler==3.11.2",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-aiohttp>=1.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
]

[project.scripts]
sidekick = "sidekick.bot:main"
sidekick-init = "sidekick.init_cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/sidekick"]

[[tool.mypy.overrides]]
module = ["chronary.*", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
addopts = "-v --cov=src/sidekick --cov-report=term-missing --cov-report=xml --cov-fail-under=80"

[tool.coverage.run]
source = ["src/sidekick"]
branch = true

[tool.bandit]
# Skip rules that fire on intentional patterns in this codebase:
#   B404 — "subprocess module" import. We spawn the MCP server via stdio
#          transport; the import is unavoidable.
#   B603 — subprocess call with shell=False on a controlled argv list
#          (MCP launcher). Inputs are not user-controlled.
#   B607 — start_process with a partial path. The htmx integrity hash check
#          and MCP launcher rely on PATH-resolved binaries by design.
skips = ["B404", "B603", "B607"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
